# must-let

./: Cargo.toml  README.md
src/: lib.rs
tests/: failure.rs  success.rs
